--- a/html/ejercicioresulto1.html
+++ b/html/ejercicioresulto1.html
@@ -1,10 +1,56 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="../css/css/uikit.min.css" />
+    <title>Document</title>
 </head>
 <body>
+<br>
+<h1 id="titulo1">EJERCICIO 1</h1>
+<hr class="uk-divider-icon">
+<br>
+<div class="uk-child-width-expand@s uk-text-center" uk-grid>
+    <div>
+        <div class="uuk-card uk-card-default uk-card-body">
+            <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
+                <img src="../Imagenes/imagenfondo2.jpg" alt="">
+                <div class="uk-transition-fade uk-position-cover uk-position-small uk-overlay uk-overlay-default uk-flex uk-flex-center uk-flex-middle">
+                    <p class="uk-h4 uk-margin-remove">Fade</p>
+                </div>
+            </div>
+            <p class="uk-margin-small-top">Fade</p>
+        </div>
+    </div>
+    <div>
 
+        <div class="uk-card uk-card-default uk-card-body">
+            <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
+                <img src="../Imagenes/imagenfondo1.jpg" alt="">
+                <img class="uk-transition-scale-up uk-position-cover" src="../Imagenes/imagenfondo3.jpg" alt="">
+            </div>
+            <p class="uk-margin-small-top">2 Images</p>
+        </div>
+    </div>
+    <div>
+
+        <div class="uk-card uk-card-default uk-card-body">
+            <div class="uk-inline-clip uk-transition-toggle uk-light" tabindex="0">
+                <img src="../Imagenes/imagenfondo5.jpg" alt="">
+                <div class="uk-position-center">
+                    <div class="uk-transition-slide-top-small"><h4 class="uk-margin-remove" id="h4">Headline</h4></div>
+                    <div class="uk-transition-slide-bottom-small"><h4 class="uk-margin-remove" id="h4">Subheadline</h4></div>
+                </div>
+            </div>
+            <p class="uk-margin-small-top">Small Top + Bottom</p>
+        </div>
+    </div>
+</div>
+<br><br>
 </body>
+<script src="../js/uikit.min.js"></script>
+<script src="../js/uikit-icons.min.js"></script>
 </html>
